Beat loop now auto syncs, still shaky rhythm

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 	</style>
 </head>
 <body>
-	<div id="myContainer">
+	<!-- <div id="myContainer"> -->
 		<div id="header" class="header"></div>
-	</div>
+	<!-- </div> -->
 </body>
 </html>
