--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 
 	<title>Polybeat</title>
 
+	<!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script> -->
 	<script src="libraries/p5.js"></script>
+	<!-- <script src="libraries/environment.js"></script> -->
 	<script src="libraries/p5.dom.js"></script>
 	<script src="libraries/p5.sound.js"></script>
-	<script src="sketch.js"></script>
+	<script src="polybeat.js"></script>
 
 	<!--
 		Style
