Finished new strat with best syncing yet

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 	<!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script> -->
 	<script src="libraries/p5.js"></script>
-	<!-- <script src="libraries/environment.js"></script> -->
-	<script src="libraries/p5.dom.js"></script>
+	<!-- <script src="libraries/p5.dom.js"></script> -->
 	<script src="libraries/p5.sound.js"></script>
 	<script src="polybeat.js"></script>
 
@@ -32,8 +31,6 @@
 	</style>
 </head>
 <body>
-	<!-- <div id="myContainer"> -->
 		<div id="header" class="header"></div>
-	<!-- </div> -->
 </body>
 </html>
