--- a/index.html
+++ b/index.html
@@ -31,11 +31,17 @@
 			play_speed = 10 * (1 - ((window.innerWidth + slider_width) / 2 - event.clientX) / slider_width);
 			console.log(play_speed);
 		}
+
 	</script>
 
 </head>
 <body onload="start()">
-	<img src="./resources/pngs/add.png" alt="add_button" class="add-button" onmouseup='createPoly()'></img>
+	<svg width="130px" height="100px" viewBox="0 0  130 100" preserveAspectRatio="xMidYMid meet" class='add-button' onmouseup='createPoly()'>
+		<rect class="add-rect" id="add_rect" x="0" y="0" width="130" height="100" rx="10" ry="10"/>
+		<text id="add_text" style="fill:white;font-family:Arial;font-size:20px;" x="25" y="30" >add beat</text>
+		<line id="add_line_vert" x1="50%" y1="40" x2="50%" y2="90" style="stroke:white;fill:none;stroke-width:5px;"/>
+		<line id="add_line_horz" x1="40" y1="63" x2="90" y2="63" style="stroke:white;fill:none;stroke-width:5px;"/>
+	</svg>
 	<div id="header" class="header">Polybeat</div>
 	<div id="audio-samples">
 		<audio preload src='resources/sounds/drums/0.mp3'></audio>
@@ -47,7 +53,12 @@
 
 	<div id="container">
 		<div class="vertpad"></div>
-		<div id="toolbox" class="tools">
+		<div id="tools" class="tools">
+			<div class="toolbox"></div>
+			<div class="toolbox"></div>
+			<div class="toolbox"></div>
+			<div class="toolbox"></div>
+			<div class="toolbox"></div>
 
 			<!-- <div id="speed_slider" class="speedSlider" onmouseup="speedSliderUpdate(event)">
 				<div class="speedTxt">Modify speed</div>
